--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/callback",
-      "dest": "app.py"
-    }
-  ]
+	"devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
+	"builds": [
+	  {
+		"src": "api/index.py",
+		"use": "@vercel/python"
+	  }
+	],
+	"routes": [
+	  {
+		"src": "/(.*)",
+		"dest": "api/index.py"
+	  }
+	]
 }
