--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
 	"devCommand": "uvicorn main:app --host 0.0.0.0 --port 8000",
 	"builds": [
 	  {
-		"src": "main.py",
+		"src": "api/line_basic.py",
 		"use": "@vercel/python"
 	  }
 	],
 	"routes": [
 	  {
 		"src": "/(.*)",
-		"dest": "main.py"
+		"dest": "api/line_basic.py"
 	  }
 	]
 }
