--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-	"devCommand": "uvicorn main:app --host 0.0.0.0 --port 8000",
+	"devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
 	"builds": [
 	  {
-		"src": "api/line_basic.py",
+		"src": "api/index.py",
 		"use": "@vercel/python"
 	  }
 	],
 	"routes": [
 	  {
 		"src": "/(.*)",
-		"dest": "api/line_basic.py"
+		"dest": "api/index.py"
 	  }
 	]
-}
+  }
