--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fastapi
+fastapi==0.88.0
+pytest==7.1.3
+pytest-asyncio==0.20.3
+uvicorn==0.20.0
+pydantic~=1.10.4
+line-bot-sdk==1.8.0
 openai
-flask
-uvicorn
-python-dotenv
-line-bot-sdk==3.10.2
 langchain==0.2.17
 langchain-openai
 langchain-community
